--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context="whatever.marvin.CameraFragment">
 
-    <whatever.marvin.AutoFitTextureView
+    <TextureView
         android:id="@+id/texture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
