--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     android:background="#0099cc"
     tools:context=".MainActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-
-    <TextView android:id="@+id/fullscreen_content"
+    <fragment android:name="whatever.marvin.CameraFragment"
+        android:id="@+id/fragment_camera"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
-        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
-        android:text="@string/dummy_content" />
+        android:layout_height="match_parent" />
+
+    <fragment android:name="whatever.marvin.MarvinFragment"
+        android:id="@+id/fragment_marvin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
